--- a/src/quote-component/quote-component.html
+++ b/src/quote-component/quote-component.html
@@ -1,3 +1,3 @@
-<div>    
-    <h2>"{{ $ctrl.selectedQuote.text }}"</h2>
+<div class="center">    
+    <h2 class="quote" ng-if="$ctrl.selectedQuote">"{{ $ctrl.selectedQuote.text }}"</h2>
 </div>
