changed parent component

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
 
         <bttf-quotes character="vm.selectedCharacter" on-quote-retrieved="vm.onQuoteSelected()"></bttf-quotes>
+
+        <h2>Quotes Viewed: {{ vm.quoteCount }}</h2>
     </div>
 </body>
 
